--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <span class="user-nav__notification">15</span>
                     </div>
                     <div class="user-nav__user">
-                        <img src="img/user1.jpg" alt="User photo" class="user-nav__user-photo">
+                        <img src="img/user1.JPG" alt="User photo" class="user-nav__user-photo">
                         <span class="user-nav__user-name">Andrei</span>   
                     </div>
                 </nav>
